--- a/clientes/templates/base.html
+++ b/clientes/templates/base.html
@@ -27,6 +27,7 @@
                         <a class="nav-link" href="{% url 'inicio' %}">Início</a>
                         <a class="nav-link" href="{% url 'lista_clientes' %}">Clientes
                         <a class="nav-link" href="{% url 'lista_funcionarios' %}">Funcionários</a>
+                        <a class="nav-link" href="{% url 'lista_produtos' %}">Produtos</a>
                 </ul>
             </div>
         </nav>
