--- a/clientes/templates/clientes/lista_clientes.html
+++ b/clientes/templates/clientes/lista_clientes.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="container">
     <h1>Lista de Clientes</h1>
-    <form method="GET">
+    <form method="GET" class= "d-inline-flex p-2 bd-highlight">
         <div class="input-group-prepend">
             <button class="btn btn-outline-secondary" type="submit" id="button-addon1">Buscar</button>
         </div>
