--- a/inicio/templates/inicio/inicio.html
+++ b/inicio/templates/inicio/inicio.html
@@ -24,18 +24,12 @@
             </a>
             <div class="container-fluid" id="navbarNav">
                 <ul class="navbar-nav">
-                        <a class="nav-link" href="{% url 'inicio' %}">Início</a>
-                        <a class="nav-link" href="{% url 'lista_clientes' %}">Clientes
-                        <a class="nav-link" href="{% url 'lista_funcionarios' %}">Funcionários</a>
+                    <a class="nav-link" href="{% url 'inicio' %}">Início</a>
+                    <a class="nav-link" href="{% url 'lista_clientes' %}">Clientes
+                    <a class="nav-link" href="{% url 'lista_funcionarios' %}">Funcionários</a>
+                    <a class="nav-link" href="{% url 'lista_produtos' %}">Produtos</a>
                 </ul>
-                <form class="navbar-nav">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Buscar">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
-                  </form>
             </div>
-
-           
-            
         </nav>
     </header>
 
